# CronoHash

./: .gitignore  CMakeLists.txt  CodeOfFolder.txt  CronoHash.cpp  CronoHash.sln  CronoHash.vcxproj  CronoHash.vcxproj.filters  FileScanner.py  README.md  WHITEPAPER.md
CronoHash/x64/Debug/: CronoHash.exe.recipe  CronoHash.ilk  CronoHash.vcxproj.FileListAbsolute.txt  vc143.idb
CronoHash/x64/Debug/CronoHash.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CronoHash.lastbuildstate  CronoHash.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: crono_hash.h  crono_math.h  crono_quantum.h  crono_utils.h
src/: crono_hash.cpp  crono_math.cpp  crono_quantum.cpp  crono_utils.cpp
tests/: CronoHashTests.cpp
x64/Debug/: CronoHash.exp  CronoHash.lib
